update to the endpoints and rest file
